# cfour

./: .gitignore  CMakeLists.txt  README.md  deploy.sh
src/: CMakeLists.txt  cfour.cpp  complayer.cpp  complayer.hpp  grid.cpp  grid.hpp  humplayer.cpp  humplayer.hpp  test.hpp
